tests/externblob/from_other_ns.sy
use some_ns

Foo :: newblob { }

create_foo : fn -> Foo : external

start :: fn do
  foo :: create_foo'

  some_ns.use_foo' foo
end

// error: A 'Foo from tests/newblob/some_ns.sy' cannot be a 'Foo from tests/newblob/from_other_ns.sy'
